# nxtetris

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  alpha_8h.html  alpha_8h.js  alpha_8h_source.html  annotated.html  annotated_dup.js  audio_8c.html  audio_8c.js  audio_8h.html  audio_8h.js  audio_8h_source.html  board_8c.html  board_8c.js  board_8h.html  board_8h.js  board_8h_source.html  classes.html  color_8h.html  color_8h.js  color_8h_source.html  controls_8c.html  controls_8c.js  controls_8h.html  controls_8h.js  controls_8h_source.html  cpu_8c.html  cpu_8c.js  cpu_8h.html  cpu_8h.js  cpu_8h_source.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_1699be727a800b1d059c6f7f2b91d2ee.js  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a.js  (+120 more)
.github/workflows/: doxygen.yml
cmake/: vcpkg.cmake
engine/: audio.c  audio.h  collisions.h  controls.c  controls.h  graphics.c  graphics.h
engine/enums/: alpha.h
engine/types/: color.h  point.c  point.h  rect.h
game/: game.c  game.h  tetromino.c  tetromino.h  tetrominoes.c  tetrominoes.h
game/enums/: placement_state.h
math/: matrix.c  matrix.h
nxtetris/: main.c
nxtetris.xcodeproj/: project.pbxproj
nxtetris/engine/: audio.c  audio.h  collisions.c  collisions.h  controls.h
nxtetris/game/: game.c  game.h  tetromino.c  tetromino.h
nxtetris/math/: matrix.h
nxtetris/utils/: utils.c  utils.h
resources/audio/: lock.aif  rot_cc.aif  rot_cl.aif
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  (+37 more)
src/: main.c  main_menu.c  main_menu.h
src/engine/: controls.c  controls.h  utils.c  utils.h
src/game/: board.c  board.h  cpu.c  cpu.h  game.c  game.h  game_modes.c  game_modes.h  (+4 more)
utils/: utils.h
(+38 files in other folders)
